--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <p><span>Welcome!</span></p>
         <p>
             <span>Cards- Insert number:  </span>
-            <input id="cardsInput" type="number" min="8" max="32" step="4" value = "32" onkeydown="return false"/>
+            <input id="cardsInput" type="number" min="8" max="32" step="4" value = "12" onkeydown="return false"/>
         </p>
         <p>
             <span>Players- Insert number:  </span>
-            <input id="playersNumInput" type="number" min="2" max="4"/>
+            <input id="playersNumInput" type="number" min="1" max="4" onkeydown="return false"/>
         </p>
         <div id="playersNames"></div>
         <p><input id="startGameBtn" type="button" value="START GAME"/></p>
@@ -27,7 +27,9 @@
         <div id="game-table"></div>
         <div id="btnDiv"><button id="restartGameBtn" >Restart 🔁</button></div>
     </div>
-    <div id="winScreen"></div>
+    <div>
+        <div id="winScreen"></div>
+    </div>
     <script src="game_logic.js"></script>
 </body>
 </html>
